added localstorage and list of employees on the homepage.

--- a/src/app.html
+++ b/src/app.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-	<script>
-		import Employee from './components/Employee.svelte'
-	</script>
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
@@ -10,6 +7,6 @@
 		%sveltekit.head%
 	</head>
 	<body>
-		%sveltekit.body%
+		<div>%sveltekit.body%</div>
 	</body>
 </html>
